# bquiz

./: README.md
burger-quiz-client/: .gitignore  README.md  angular.json  docker-compose.yml  karma.conf.js  package-lock.json  package.json
burger-quiz-client/data/nginx/: app.conf
burger-quiz-client/e2e/src/: app.e2e-spec.ts
burger-quiz-client/src/: index.html  styles.scss
burger-quiz-client/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts  lite-com.service.spec.ts  lite-com.service.ts  server-comm.service.spec.ts  server-comm.service.ts
burger-quiz-client/src/app/nuggets/: nuggets.component.css  nuggets.component.html  nuggets.component.ts
burger-quiz-client/src/app/nuggets-lite/: nuggets-lite.component.css  nuggets-lite.component.html  nuggets-lite.component.spec.ts  nuggets-lite.component.ts
burger-quiz-client/src/app/shared/: qwebchannel.ts
burger-quiz-client/src/app/team-details/: team-details.component.css  team-details.component.html  team-details.component.ts
lite-quiz-server/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
quiz-manager/: CMakeLists.txt  imageviewer.cpp  imageviewer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
